test/type/fail/null_call.j
class A{
  Void main() {
    return null.a();
  }
}
